--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,8 +1,8 @@
-<body>
+
   <div id="wrapper">
 
-<div style="text-align: center">
-	<img id="logo" src="img/sunset.jpg" alt="Backrub">
+<!-- <div style="text-align: center">
+	<img id="logo" src="img/sunset.jpg" alt="Backrub"> -->
 </div>
 <p>Heaven or Las Vegas</p>
 
@@ -55,8 +55,4 @@
 	Copyright © 2015 AA
 
   </div>
-
-</body>
-
-
 	
