adding Heroku support into framework

--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -28,7 +28,7 @@
     <th>Click Count</th> 
 </tr> 
 </thead> 
-<tbody> 
+<tbody id="append_row"> 
 	<% @urls.each_with_index do |url,count| %>
 		<tr> 
 		    <td><%= count + 1%></td> 
